--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -23,7 +23,7 @@
                               </li>
                               <li><a href="/landing">Blog</a>
                                   <ul class="submenu">
-                                      <li><a routerLink="/landing">Blog</a></li>
+                                      <li><a routerLink="/vendedores">Vendedores</a></li>
                                       <li><a routerLink="/landing">Blog Details</a></li>
                                   </ul>
                               </li>
