--- a/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
@@ -1,1 +1,24 @@
-<p>vendedores works!</p>
+<div class="container-fluid">
+    <div class="row">
+<h1 class="col-md-12 col-xl-12 col-sm-12 text-center">Vendedores</h1>
+      <!--For-->
+    
+      <div class=" col-sm-6 col-md-5 col-lg-3 mb-3" *ngFor="let cuenta of cuentas">
+          <!--Inicio CArd-->
+          
+          <a [routerLink]="['/vendedor', cuenta.id]">
+          <div class="card shadow h-100 pb-2">
+              <a href="link"><img class="card-img-top no-border-top-left" src="{{cuenta.user_img.img_route}}" alt="Responsive image"></a>
+              <div class="card-body mb-0 pb-0">
+                <h5 class="card-title"><a href="linnk">{{cuenta.first_name}}&nbsp;{{cuenta.last_name}} </a> </h5>
+ 
+                
+              </div>
+          </div>
+          <!--Fincard-->
+        </a>
+      </div>
+      <!--endfor-->
+  </div>
+  </div>
+
