--- a/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
@@ -1,15 +1,41 @@
 <!--Portada-->
 
-<div class="row">
-    <div class="col-md-12 " >
+    <div *ngFor="let cuenta of cuentas">
+        
+    <div class="col-md-12 " *ngIf="cuenta.id==cuenta_id" style="background-image: url('{{cuenta.cover_img.img_route}}');background-repeat: no-repeat;background-size: cover;background-size: 100% 100%">
         
         <div class="profile-block">
             <div class="profile-block-thumb cover-container"
-                style="background-image: url('');"></div>
+                ></div>
             <div class="profile-img">
-                <img src="" alt="Imagen de perfil">
+                <img src="{{cuenta.user_img.img_route}}" alt="Imagen de perfil"  height="200px" width="30%" class="mt-3 mb-3 ml-3 mr-3">
+            </div>
+            <strong><h2 class="ml-3">{{cuenta.first_name}} &nbsp; {{cuenta.last_name}}  </h2></strong>   
+        </div>
+    </div>
+    </div>
+<h1 class="text-center">Productos</h1>
+
+<div *ngFor="let product of products" class="col-md-3 col-xl-4 col-sm-1">
+    <div *ngIf="product.user_id.id==cuenta_id " >
+        <div class="card">
+            <div class="card-header">
+                {{product.name}}
+            </div>
+            <div class="card-body">
+                <div *ngFor="let image of products_images ">
+                    
+                    <img *ngIf="product.id==image.product_id.id" src="{{image.images_id.img_route}}" alt="" class="img-fluid"
+                      alt="Card image">
+                  </div>
+                {{product.description}}
+            </div>
+            <div class="card-footer">
+                {{product.price}}
             </div>
         </div>
     </div>
+    
+    
 </div>
 <!--FinPortada-->
