--- a/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
@@ -15,6 +15,8 @@
     </div>
     </div>
 <h1 class="text-center">Productos</h1>
+<div class="row">
+  
 
 <div *ngFor="let product of products" class="col-md-3 col-xl-4 col-sm-1">
     <div *ngIf="product.user_id.id==cuenta_id " >
@@ -36,6 +38,6 @@
         </div>
     </div>
     
-    
+    </div>
 </div>
 <!--FinPortada-->
