--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -53,29 +53,37 @@
 
     <div class="row" style="margin-right: 1%;">
 
-      <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas" *ngFor="let producto of productos ; let i = index; ">
-        <a routerLink="detalle">
-          <div class="contenedor-img text-center">
-            <img loading="lazy" [src]="producto.images_id.img_route" class="estilo-img img-fluid" alt="">
-          </div>
-        </a>
-        <div class=" flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front" >
-              <label for="" class="label-desc">
-                {{ producto.product_id.name }}
-              </label><br/>
-              <strong>
-                HNL. {{ producto.product_id.price }}
-              </strong>
-            </div>
-            <div class="flip-card-back">
 
-              <a href="" class="btn btn-carrito">Agregar al carrito</a>
+
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas" *ngFor="let producto of productos ; let i = index;">
+          <a routerLink="detalle">
+            <div class="contenedor-img text-center">
+              <ng-container  *ngFor="let image of productosImagenes">
+                <img *ngIf="image.product_id.id===producto.id" loading="lazy" [src]="image.images_id.img_route" class="estilo-img img-fluid" alt="">
+                <!-- <img loading="lazy" src="assets/img/alienware15.jpg" class="estilo-img img-fluid" alt=""> -->
+              </ng-container>
+
+            </div>
+          </a>
+          <div class=" flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" >
+                <label for="" class="label-desc">
+                  {{ producto.name }}
+
+                </label><br/>
+                <strong>
+                  HNL. {{ producto.price }}
+                </strong>
+              </div>
+              <div class="flip-card-back">
+
+                <a href="" class="btn btn-carrito">Agregar al carrito</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+
 
     </div>
   </div>
