--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- ============================================================== -->
 <!-- Left Sidebar - style you can find in sidebar.scss  -->
 <!-- ============================================================== -->
-<aside class="left-sidebar">
+<aside class="left-sidebar" *ngIf="!cargando">
     <!-- Sidebar scroll-->
     <div class="scroll-sidebar">
         <!-- Sidebar navigation-->
@@ -9,13 +9,13 @@
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <img src="assets/images/users/1.jpg" alt="user" />
-                        <span class="hide-menu"> User </span>
+                        <img [src]="data.user_img.img_route" alt="user" />
+                        <span class="hide-menu"> {{data.first_name}} {{data.last_name}} </span>
                     </a>
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" routerLink="/perfil">Perfil</a></li>
-                        <li><a>Account Setting</a></li>
-                        <li><a (click)="auth.logoutUser()" class="pointer">Logout</a></li>
+                        
+                        <li><a (click)="auth.logoutUser()" class=" btn btn-primary pointer">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
