--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/header/header.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/header/header.component.html
@@ -120,9 +120,9 @@
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="ti-user"></i> Mi perfil</a></li>
+                            <li><a><i class="ti-user"></i> Mi perfil</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+                            <li><a><i class="fa fa-power-off"></i> Logout</a></li>
                         </ul>
                     </div>
                 </li>
