--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" routerLink="/perfil">Perfil</a></li>
                         
-                        <li><a (click)="auth.logoutUser()" class=" btn btn-primary pointer">Logout</a></li>
+                        <li><a (click)="auth.logoutUser()" class="pointer">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
