--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
@@ -125,15 +125,22 @@
             <div class="card-body">
                 <h4 class="card-title">Imagen de Usuario</h4>
                 <div class="text-center">
-                    <img src="assets/images/users/1.jpg" alt="" class="img-thumbnail" width="250px" height="250px">
+                    <img *ngIf="!fotoSelected" src="assets/images/users/1.jpg" 
+                         alt="" class="img-thumbnail" 
+                         width="250px" height="250px">
+                    <img *ngIf="fotoSelected" [src]="fotoSelected" 
+                          alt="" class="img-thumbnail"
+                          width="250px" height="250px">
                 </div>
                 <br>
-                <input type="file">
+                <input  type="file"
+                        (change)="fotoSeleccionada($event)">
                 <br>
                 <button type="button" 
-                        class="btn btn-success btn-block waves-effect waves-light m-r-10">
+                        class="btn btn-success btn-block waves-effect waves-light m-r-10"
+                        (click)="subirFoto()">
                         <i class="fa fa-save"></i>
-                        Cambiar Imagen
+                        Subir Foto de Perfil
                 </button>
                 
             </div>
