--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col mb-2">
                         <div class="text-right">
-                            <a class="btn btn-primary" routerLink='cuenta'>
+                            <a class="btn btn-primary" routerLink='add'>
                                 Crear Cuenta
                             </a>
                         </div>
@@ -63,9 +63,9 @@
                                     data-toggle="tooltip" 
                                     class="btn btn-sm btn-warning"
                                     data-original-title="Editar"
-                                    
+                                    [routerLink]="['edit', cuenta.id]"
                                     > 
-                                    <i class="fa fa-save text-inverse m-r-10"></i> 
+                                    <i class="fa fa-pencil"></i> 
                                 </a>
 
                                 <a  
