--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
@@ -52,16 +52,20 @@
                             <td class="text-nowrap text-center">
                                 <a 
                                     data-toggle="tooltip" 
-                                    class="cursor"
-                                    data-original-title="Editar"> 
-                                    <i class="fa fa-save text-inverse m-r-10"></i> 
+                                    class="btn btn-sm btn-warning"
+                                    data-original-title="Editar"
+                                    
+                                    > 
+                                    <i class="fa fa-pencil"></i> 
                                 </a>
 
                                 <a  
                                     data-toggle="tooltip" 
                                     data-original-title="Borrar"
-                                    class="cursor"> 
-                                    <i class="fa fa-trash text-danger"></i>
+                                    class="btn btn-sm btn-danger"
+                                    
+                                    > 
+                                    <i class="fa fa-trash"></i>
                                 </a>
                             </td>
                         </tr>
